syntax = "proto3";

option csharp_namespace = "ErpAcl.Api.Grpc";

package erpacl;

// ----------- Services -----------

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

service InvoiceService {
  rpc CancelInvoice (CancelInvoiceRequest) returns (CancelInvoiceResponse);
}

// ----------- Messages -----------

message CreateOrderRequest {
  string customer_id = 1;
  double total_amount = 2;
}

message CreateOrderResponse {
  string order_id = 1;
}

message CancelInvoiceRequest {
  string invoice_id = 1;
  string reason = 2;
}

message CancelInvoiceResponse {
  bool success = 1;
}

